# genesis-dao-parachain-node

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/dao-core/: Cargo.toml
pallets/dao-core/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
